# RIVeRplayground

Estimation Algorithm - MATLAB/: Calibration.nb  Position.m  get_meas_innov.m  get_sensor_frame.m  get_yhat_cal.m  plot_estimate.m  run_NEES_test.m  run_ekf.m
Orientation Determination/: Camera_POC_v2.m  determineOrientation.m  q2R.m
Position Determination - MATLAB/: Calibration.nb  Position.asv  Position.m  RIVeR_Coord_Def.asv  RIVeR_Coord_Def.m  Y_cal1.txt  Y_cal10.txt  Y_cal2.txt  Y_cal6.txt  Y_cal7.txt  Y_cal8.txt  Y_cal9.txt  euler_to_DCM.m  get_H_tilde.m  get_H_tilde_cal.m  get_marker_locations.m  get_sim_data.m  get_yhat.asv  get_yhat.m  perturb_sensors.m  plot_FOV.m  plot_core.m  plot_markers.m  plot_meas_innov.m  plot_vec.m  run_NIS_test.m  run_ekf_calib.m  write_sim_data.m
orientation_determination_cpp/: .CMakeLists.txt.swp  CMakeLists.txt  README.md
orientation_determination_cpp/include/: .oriDetermine.cpp.swp  CMakeLists.txt  README_matrix.txt  README_oriDetermine.txt  matrix.cpp  matrix.h  oriDetermine.cpp  oriDetermine.h
orientation_determination_cpp/src/: .orDetMain.cpp.swp  .testQ_1.txt.swp  orDetMain.cpp
position_estimation_cpp/: CMakeLists.txt  README.md
position_estimation_cpp/data/: Y_cal0.txt
position_estimation_cpp/headers/: BAG.hpp  CONSTANTS.hpp  CORE.hpp  MARKER.hpp  SENSOR.hpp  SENSOR_MIN.hpp  SYSTEM.hpp
position_estimation_cpp/src/: BAG.cpp  MARKER.cpp  SENSOR - Copy.cpp  SENSOR(copy).cpp  SENSOR.cpp  SENSOR_MIN.cpp  SYSTEM.cpp  addtl_func.cpp  main.cpp  test.cpp
task_planner/: .gitignore  CMakeLists.txt  README.md
(+26 files in other folders)
